<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:translationZ="6dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/b_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:fontFamily="serif"
            android:text="@string/copy"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/b_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:fontFamily="serif"
            android:text="@string/clear"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/point_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llButtons"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="Card No :"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_card_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:padding="5dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:text="Name :"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:text="Address :"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:translationZ="5dp"
        android:weightSum="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/front"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/back"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <TextView
        android:id="@+id/card_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/front_side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:padding="4dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/capture_btn"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:src="@drawable/glossy_grey"
        android:layout_marginRight="50dp"
        android:alpha="0.4"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>