<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b_regex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/numbers"
        android:textColor="@color/colorWhite"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/surface_view" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/b_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:fontFamily="serif"
            android:text="@string/copy"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/b_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:fontFamily="serif"
            android:text="@string/clear"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llButtons">

        <EditText
            android:id="@+id/et_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="92dp"
            android:background="@color/colorWhite"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="14sp"
            android:visibility="gone" />
    </ScrollView>

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/point_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:padding="5dp"
            android:text="NRIC NO :"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/nric_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:layout_marginLeft="36dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/nric_no_last4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:layout_marginLeft="36dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:padding="5dp"
            android:text="Name :"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:layout_marginLeft="36dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:padding="5dp"
            android:text="Address :"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:layout_marginLeft="36dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:padding="5dp"
            android:text="Postal Code :"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/post_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:layout_marginLeft="36dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/capture_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="1dp"
        android:src="@drawable/glossy_grey"
        android:layout_marginBottom="80dp"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>